<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>

