<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cocktaildb.screen.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.cocktaildb.screen.dashboard.DashboardFragment"
        android:label="@string/title_today_drink"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.cocktaildb.screen.createrecipe.CreateRecipeFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_create_recipe" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.cocktaildb.screen.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cocktaildb.screen.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_my_recipe"
        android:name="com.example.cocktaildb.screen.myrecipe.MyRecipeFragment"
        android:label="@string/title_my_recipe"
        tools:layout="@layout/fragment_my_recipe" />

    <fragment
        android:id="@+id/navigation_cocktail_detail"
        android:name="com.example.cocktaildb.screen.detail.CocktailDetailFragment"
        android:label="Cocktail Detail"
        tools:layout="@layout/fragment_cocktail_detail">
        
        <argument
            android:name="cocktail_id"
            app:argType="string" />
        <argument
            android:name="cocktail_name"
            app:argType="string" />
        <argument
            android:name="cocktail_category"
            app:argType="string" />
        <argument
            android:name="cocktail_alcoholic"
            app:argType="string" />
        <argument
            android:name="cocktail_glass"
            app:argType="string" />
        <argument
            android:name="cocktail_instructions"
            app:argType="string" />
        <argument
            android:name="cocktail_image"
            app:argType="string" />
        <argument
            android:name="cocktail_ingredients"
            app:argType="string[]" />
        <argument
            android:name="cocktail_measures"
            app:argType="string[]" />
        
        <action
            android:id="@+id/action_cocktailDetailFragment_self"
            app:destination="@id/navigation_cocktail_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.cocktaildb.screen.history.HistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_history" />
</navigation>
