<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications_description"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/text_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_test_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test_notification"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_background"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_schedule_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_schedule_notification"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_background"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_test_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cancel_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_notification"
        android:textSize="16sp"
        android:padding="16dp"
        android:background="@drawable/rounded_button_background"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_schedule_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications_info"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

