<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_16">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/profile_title"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16">

        <!-- Circular Image using MaterialCardView -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profileImageCard"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_marginStart="@dimen/dp_24"
            app:cardCornerRadius="@dimen/dp_60"
            app:cardElevation="@dimen/dp_4">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_profile_image"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_placeholder" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Logout button positioned at the top right -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_24"
            android:backgroundTint="#FF5252"
            android:text="Logout"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/dp_16"
            app:icon="@android:drawable/ic_lock_power_off"
            app:iconTint="@color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/user_name"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/user_bio"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/textColorSecondary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/myRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/profile_button_green"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:paddingStart="@dimen/dp_24"
            android:paddingEnd="@dimen/dp_24"
            android:text="@string/my_recipe_button"
            app:cornerRadius="@dimen/dp_16" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:backgroundTint="@color/profile_button_green"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:paddingStart="@dimen/dp_24"
            android:paddingEnd="@dimen/dp_24"
            android:text="@string/history_button"
            app:cornerRadius="@dimen/dp_16" />
    </LinearLayout>

</LinearLayout>
